# Decodebench

./: .gitignore  README.md  pyproject.toml  references.md
.github/workflows/: ci.yml
examples/custom_kernel/: bench_example.py  bindings.cpp  kernel.cu  setup.py
model/: cost_model.py
src/decodebench/: __init__.py  bytes_model.py  cli.py  figures.py  graph.py  report.py  sequence.py  stats.py  timing.py  verdict.py
src/decodebench/demos/: llama_decode.py
tests/: conftest.py  test_bytes_model.py  test_cli_smoke.py  test_cost_model.py  test_figures_smoke.py  test_gpu_e2e.py  test_report.py  test_sequence_bindings.py  test_stats.py  test_timing_inputs.py  test_validation_analysis.py  test_verdict.py
validation/: CMakeLists.txt  PREREGISTRATION-v2.md  README.md  RUNBOOK-confirmatory.md
validation/analysis/: compare.py  parse_ncu.py
validation/include/decodebench_val/: kernel_args.h  tensor.h  timing.h
validation/results/gtx1060/: ncu_metrics.csv  ncu_tmp_f4_unfused-stream.csv  timing.csv  validation_report.md
validation/results/l4/: ncu_metrics.csv  ncu_raw_f1_fused.csv  ncu_raw_f1_fused_2048.csv  ncu_raw_f1_fused_4096.csv  ncu_raw_f1_unfused-stream.csv  ncu_raw_f1_unfused-stream_2048.csv  ncu_raw_f1_unfused-stream_4096.csv  ncu_raw_f2_fused.csv  ncu_raw_f2_fused_2048.csv  ncu_raw_f2_fused_4096.csv  ncu_raw_f2_unfused-stream.csv  ncu_raw_f2_unfused-stream_2048.csv  ncu_raw_f2_unfused-stream_4096.csv  ncu_raw_f4_fused.csv  ncu_raw_f4_fused_2048.csv  ncu_raw_f4_fused_4096.csv  ncu_raw_f4_unfused-stream.csv  ncu_raw_f4_unfused-stream_2048.csv  ncu_raw_f4_unfused-stream_4096.csv  ncu_tmp_f1_fused.csv  ncu_tmp_f1_unfused-stream.csv  ncu_tmp_f2_fused.csv  ncu_tmp_f2_unfused-stream.csv  ncu_tmp_f4_fused.csv  ncu_tmp_f4_unfused-stream.csv  timing.csv  validation_report.md
validation/results/rtx6000pro/: timing.csv  validation_report.md
validation/results/t4/: ncu_metrics.csv  ncu_raw_f1_fused.csv  ncu_raw_f1_fused_2048.csv  ncu_raw_f1_fused_4096.csv  ncu_raw_f1_unfused-stream.csv  ncu_raw_f1_unfused-stream_2048.csv  ncu_raw_f1_unfused-stream_4096.csv  ncu_raw_f2_fused.csv  ncu_raw_f2_fused_2048.csv  ncu_raw_f2_fused_4096.csv  ncu_raw_f2_unfused-stream.csv  ncu_raw_f2_unfused-stream_2048.csv  ncu_raw_f2_unfused-stream_4096.csv  ncu_raw_f4_fused.csv  ncu_raw_f4_fused_2048.csv  ncu_raw_f4_fused_4096.csv  ncu_raw_f4_unfused-stream.csv  ncu_raw_f4_unfused-stream_2048.csv  ncu_raw_f4_unfused-stream_4096.csv  ncu_tmp_f4_fused.csv  ncu_tmp_f4_unfused-stream.csv  timing.csv  validation_report.md
validation/scripts/: check_env.sh  ncu_collect.sh  validate.sh
validation/src/bench/: bench_variant.cu  calibrate.cu
validation/src/kernels/device/: gemv_core.h  rmsnorm_core.h  warp_reduce.h
validation/src/kernels/fused/: f1.cu  f2.cu  f4.cu
validation/src/kernels/unfused/: attn_scores.cu  attn_v.cu  gemv.cu  rmsnorm.cu  softmax.cu  swiglu.cu
validation/src/reference/: cpu_reference.cpp  cpu_reference.h
validation/src/tests/: test_reference.cpp
